MCA Dev/src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>used to check whether the program is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Syndication__c</fullName>
        <label>Allow Syndication</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BK_Policy__c</fullName>
        <label>BK Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Bank</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Count__c</fullName>
        <label>Batch Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_Cost_Policy__c</fullName>
        <label>Closing Cost Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Payment_Timeframe__c</fullName>
        <label>Commission Payment Timeframe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <label>Commission %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_on_Renewal__c</fullName>
        <label>Commission on Renewal %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Min. Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directory_Status__c</fullName>
        <label>Directory Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Approval_Date__c</fullName>
        <label>Expected Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factor_Rate_12_Months__c</fullName>
        <label>Factor Rate - 12 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor_Rate_6_Months__c</fullName>
        <label>Factor Rate - 6 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <label>Financials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Amt_of_Monthly_Gross_Sales__c</fullName>
        <inlineHelpText>What is the multiple that this bank typically funds as a ratio to the merchant&apos;s monthly gross sales volume</inlineHelpText>
        <label>Funding Amt - % of Monthly Gross Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Login_to_Bank_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Login to Bank Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <label>Max. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Holdback_Percentage__c</fullName>
        <label>Max. Holdback %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_NDBs__c</fullName>
        <label>Max NDBs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_No_NSFs__c</fullName>
        <label>Max# NSFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methods_of_Repayment__c</fullName>
        <label>Method of Repayment</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Avg_Daily_Bal__c</fullName>
        <label>Min. Avg Daily Bal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Credit_Score__c</fullName>
        <label>Min. Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Monthly_CC_Avg__c</fullName>
        <label>Min. Monthly CC Avg $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Monthly_Deposits__c</fullName>
        <label>Min. Monthly Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Advance__c</fullName>
        <label>Minimum Advance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Deposit_Count__c</fullName>
        <inlineHelpText>Number of days per month where deposits are made into the bank account.</inlineHelpText>
        <label>Min. Monthly Bank Deposit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Percentage_Requirement__c</fullName>
        <label>Ownership Percentage Requirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payback_Funded__c</fullName>
        <label>Payback/Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Net_After_Payoff__c</fullName>
        <label>Percentage Net After Payoff</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Commission__c</fullName>
        <label>Potential Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Funding_Amount__c</fullName>
        <label>Potential Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preffered_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProgramExternalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligibility__c</fullName>
        <label>Renewal Eligibility %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Restricted_Industry_List__c</fullName>
        <label>Restricted Industry List</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Restricted_States__c</fullName>
        <label>Restricted States</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stips__c</fullName>
        <label>Stips</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Email_CC_1__c</fullName>
        <label>Submission Email CC (1)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submission_Email_CC_2__c</fullName>
        <label>Submission Email CC (2)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submission_Email__c</fullName>
        <label>Submission Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submission_Method__c</fullName>
        <label>Submission Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Lean_Policy__c</fullName>
        <label>Tax Lien Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_References__c</fullName>
        <label>Trade References</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required - 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required - 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <inlineHelpText>The time (days) it takes the Bank to process an application and respond with an approval or decline.</inlineHelpText>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Position__c</fullName>
        <label>2nd Position Deals</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Min. Years in Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Preffered_Programs__c</columns>
        <columns>Active__c</columns>
        <columns>Min_Monthly_Deposits__c</columns>
        <columns>Years_in_Business__c</columns>
        <columns>Minimum_Deposit_Count__c</columns>
        <columns>Min_Credit_Score__c</columns>
        <columns>Credit_Score__c</columns>
        <columns>Min_Avg_Daily_Bal__c</columns>
        <columns>Min_Monthly_CC_Avg__c</columns>
        <columns>Max_No_NSFs__c</columns>
        <columns>Max_NDBs__c</columns>
        <columns>Industry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>To_Validate_Email_Template_Id</fullName>
        <active>true</active>
        <description>This will show an error only when the EmailTemplateId field is blank or not in proper format while saving the program</description>
        <errorConditionFormula>OR
(
LEFT((Email_Template_Id__c), 3) &lt;&gt; &quot;00X&quot;,
AND(LEN(Email_Template_Id__c) &lt;&gt; 15, 
    LEN(Email_Template_Id__c) &lt;&gt; 18)
)</errorConditionFormula>
        <errorMessage>Please enter the Id in the correct format of the Email Template you wish to be used when submitting through the Submission Wizard.</errorMessage>
    </validationRules>
</CustomObject>